add for zookeeper